Fixed a bug with 'Too long' error message for the last name field

--- a/Module5_solution/css/admin.css
+++ b/Module5_solution/css/admin.css
@@ -146,7 +146,7 @@ form span {
 .formError {
   font: bold;
   color: red;
-  margin-left: 30px;
+  margin-left: 15px;
 }
 
 .infoLabel {
